Fixed sections overlapping.

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ a {
     background-position: top center;
     position: relative;
     z-index: 1;
+    min-height: 100vh;
 }
 #hero::after {
     content: "";
@@ -107,7 +108,7 @@ a {
     max-width: 1200px;
     margin: 0 auto;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     transition: .3s ease all;
 }
 #menu .menu {
@@ -299,6 +300,15 @@ a {
 /* =================================================================== *
 
 /* Contacts */
+#contacts {
+    flex-direction: column;
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
+    min-height: 100vh;
+    margin-top: 5rem;
+    transition: .3s ease all;
+}
 #contacts .contacts {
     flex-direction: column;
     max-width: 1200px;
@@ -306,11 +316,11 @@ a {
     margin-top: 3rem;
 }
 #contacts .contacts-header {
-    margin: -1rem 0;
+    margin: 2rem 0;
 }
 #contacts .contacts-title {
     font-size: 4rem;
-    margin-bottom: 10px;
+    margin: 0 5rem;
     letter-spacing: .5rem;
 }
 #contacts .contacts-header span {
